--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "randomcolor": "^0.6.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-gcolor-picker": "^1.3.3",
     "react-hook-form": "^7.52.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
+    "y": "^0.3.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
