--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-pdf/renderer": "^3.4.4",
     "@supabase/supabase-js": "^2.44.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "colord": "^2.9.3",
     "framer-motion": "^11.2.12",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
     "randomcolor": "^0.6.2",
@@ -28,6 +30,7 @@
     "react-dom": "^18",
     "react-gcolor-picker": "^1.3.3",
     "react-hook-form": "^7.52.0",
+    "react-to-pdf": "^1.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
